--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -2,7 +2,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href='{{ path('app_home') }}'>Home</a>
+                <a class="nav-link {% if app.request.get('_route') == 'app_home' %}active{% endif %}" href='{{ path('app_home') }}'>Start</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if app.request.get('_route') == 'app_dashboard' %}active{% endif %}" href='{{ path('app_dashboard') }}'>Dashboard</a>
             </li>
         </ul>
     </div>
