Feature: Add User Login Feature

--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -4,9 +4,18 @@
             <li class="nav-item">
                 <a class="nav-link {% if app.request.get('_route') == 'app_home' %}active{% endif %}" href='{{ path('app_home') }}'>Start</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link {% if app.request.get('_route') == 'app_dashboard' %}active{% endif %}" href='{{ path('app_dashboard') }}'>Dashboard</a>
-            </li>
+            {% if app.user %}
+                <li class="nav-item">
+                    <a class="nav-link {% if app.request.get('_route') == 'app_dashboard' %}active{% endif %}" href='{{ path('app_dashboard') }}'>Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if app.request.get('_route') == 'app_logout' %}active{% endif %}" href='{{ path('app_logout') }}'>Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link {% if app.request.get('_route') == 'app_login' %}active{% endif %}" href='{{ path('app_login') }}'>Login</a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
