Feature: add User Registration Feature

--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link {% if app.request.get('_route') == 'app_login' %}active{% endif %}" href='{{ path('app_login') }}'>Login</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link {% if app.request.get('_route') == 'app_register' %}active{% endif %}" href='{{ path('app_register') }}'>Register</a>
+                </li>
             {% endif %}
         </ul>
     </div>
