--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,18 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h2>Register</h2>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        <div class="form-group">
+            {{ form_row(registrationForm.email, {'attr' : {'class': 'form-control'}}) }}
+        <div>
+        <div class="form-group mt-2">
+            {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}, {
+                label: 'Password',
+                }) 
+            }}
+        </div>
+        <button type="submit" class="btn btn-primary my-2">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
