--- a/templates/components/nav.html.twig
+++ b/templates/components/nav.html.twig
@@ -1,24 +1,42 @@
+{% set requestRoute = app.request.get('_route') %}
+
 <nav class="navbar navbar-expand bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link {% if app.request.get('_route') == 'app_home' %}active{% endif %}" href='{{ path('app_home') }}'>Start</a>
+                <a class="nav-link {% if requestRoute == 'app_home' %}active{% endif %}" href='{{ path('app_home') }}'>Start</a>
             </li>
             {% if app.user %}
                 <li class="nav-item">
-                    <a class="nav-link {% if app.request.get('_route') == 'app_dashboard' %}active{% endif %}" href='{{ path('app_dashboard') }}'>Dashboard</a>
+                    <a class="nav-link 
+                        {% if requestRoute == 'app_dashboard' or requestRoute  == 'app_register' %}active{% endif %}" 
+                        href='{{ path('app_dashboard') }}'>Dashboard
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if app.request.get('_route') == 'app_logout' %}active{% endif %}" href='{{ path('app_logout') }}'>Logout</a>
+                    <a class="nav-link {% if requestRoute == 'app_logout' %}active{% endif %}" href='{{ path('app_logout') }}'>Logout</a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link {% if app.request.get('_route') == 'app_login' %}active{% endif %}" href='{{ path('app_login') }}'>Login</a>
+                    <a class="nav-link {% if requestRoute == 'app_login' %}active{% endif %}" href='{{ path('app_login') }}'>Login</a>
                 </li>
                  <li class="nav-item">
-                    <a class="nav-link {% if app.request.get('_route') == 'app_register' %}active{% endif %}" href='{{ path('app_register') }}'>Register</a>
+                    <a class="nav-link {% if requestRoute == 'app_register' %}active{% endif %}" href='{{ path('app_register') }}'>Register</a>
                 </li>
             {% endif %}
         </ul>
+        {% if app.user %}
+            <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item small">
+                    <span class="text-muted">Zalogowany: <b>{{ app.user.getEmail() }}</b> | Rola: <b>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            Administrator
+                        {% elseif is_granted('ROLE_USER') %}
+                            User
+                        {% endif %}
+                    </b></span>
+                </li>
+            </ul>
+        {% endif %}
     </div>
 </nav>
