--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,24 +3,26 @@
 {% block title %}Register{% endblock %}
 
 {% block dashboardBody %}
-    <div class="card">
-        <div class="card-body">
+    {% if is_granted('ROLE_ADMIN') %}
+        <div class="card">
+            <div class="card-body">
 
-            <h2>Register user</h2>
+                <h2>Register user</h2>
 
-            {{ form_start(registrationForm) }}
-                <div class="form-group">
-                    {{ form_row(registrationForm.email, {'attr' : {'class': 'form-control'}}) }}
-                </div>
-                <div class="form-group mt-2">
-                    {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}, {
-                        label: 'Password',
-                        }) 
-                    }}
-                </div>
-                <button type="submit" class="btn btn-primary my-2">Register</button>
-            {{ form_end(registrationForm) }}
-            
+                {{ form_start(registrationForm) }}
+                    <div class="form-group">
+                        {{ form_row(registrationForm.email, {'attr' : {'class': 'form-control'}}) }}
+                    </div>
+                    <div class="form-group mt-2">
+                        {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}, {
+                            label: 'Password',
+                            }) 
+                        }}
+                    </div>
+                    <button type="submit" class="btn btn-primary my-2">Register</button>
+                {{ form_end(registrationForm) }}
+                
+            </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock %}
