UserModule Fix: add user role to User Register Form

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,11 @@
                         {{ form_row(registrationForm.email, {'attr' : {'class': 'form-control'}}) }}
                     </div>
                     <div class="form-group mt-2">
+                        {{ form_row(registrationForm.Roles, {'attr' : {'class': 'form-select'}}, 
+                            { label: 'Role'}) 
+                        }}
+                    </div>
+                    <div class="form-group mt-2">
                         {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}, {
                             label: 'Password',
                             }) 
