--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,15 +14,13 @@
                         {{ form_row(registrationForm.email, {'attr' : {'class': 'form-control'}}) }}
                     </div>
                     <div class="form-group mt-2">
-                        {{ form_row(registrationForm.Roles, {'attr' : {'class': 'form-select'}}, 
-                            { label: 'Role'}) 
-                        }}
+                        {{ form_row(registrationForm.name, {'attr' : {'class': 'form-control'}}) }}
                     </div>
                     <div class="form-group mt-2">
-                        {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}, {
-                            label: 'Password',
-                            }) 
-                        }}
+                        {{ form_row(registrationForm.Roles, {'attr' : {'class': 'form-select'}}) }}
+                    </div>
+                    <div class="form-group mt-2">
+                        {{ form_row(registrationForm.plainPassword, {'attr' : {'class': 'form-control'}}) }}
                     </div>
                     <button type="submit" class="btn btn-primary my-2">Register</button>
                 {{ form_end(registrationForm) }}
