View: AdminPanel: refactor card

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -14,7 +14,11 @@
         {% endif %}
     </div>
 
-    {% block dashboardBody %}{% endblock %}
+    <div class="card">
+        <div class="card-body">
+            {% block dashboardBody %}{% endblock %}
+        </div>
+    </div>
 
 </div>
 
