--- a/templates/warehouse/show.html.twig
+++ b/templates/warehouse/show.html.twig
@@ -1,8 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard/index.html.twig' %}
 
-{% block title %}Warehouse{% endblock %}
+{% block title %}Register{% endblock %}
 
-{% block body %}
+{% block dashboardBody %}
+
     <h1>Warehouse</h1>
 
     <table class="table">
@@ -27,4 +28,5 @@
     <a class="btn btn-info" href="{{ path('app_warehouse_edit', {'id': warehouse.id}) }}">edit</a>
 
     {{ include('warehouse/_delete_form.html.twig') }}
+    
 {% endblock %}
