--- a/templates/components/adminDashboardNavComponent.html.twig
+++ b/templates/components/adminDashboardNavComponent.html.twig
@@ -12,7 +12,6 @@
                         <li><a class="dropdown-item" href="{{ path('app_register') }}">Register user</a></li>
                     </ul>
                 </li>
-
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle
                     {% if requestRoute == 'app_warehouse_new' or requestRoute  == 'app_warehouse_index' %}active{% endif %}
@@ -20,6 +19,15 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{{ path('app_warehouse_new') }}">Create new</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_warehouse_index') }}">List</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle
+                    {% if requestRoute == 'app_article_new' or requestRoute  == 'app_article_index' %}active{% endif %}
+                " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Article</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{{ path('app_article_new') }}">Create new</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_article_index') }}">List</a></li>
                     </ul>
                 </li>
             </ul>
