Fix: add module name to site title

--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'dashboard/index.html.twig' %}
 
-{% block title %}{{ parent() }}{% endblock %}
+{% block title %}{{ parent() }} - Article{% endblock %}
 
 {% block dashboardBody %}
 
