--- a/templates/warehouse/edit.html.twig
+++ b/templates/warehouse/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'dashboard/index.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}{{parent() }} - Warehouse{% endblock %}
 
 {% block dashboardBody %}
 
