--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -40,9 +40,13 @@
     </table>
 
     <a class="btn btn-info" href="{{ path('app_article_index') }}">back to list</a>
+    
+    {% if is_granted('ROLE_ADMIN') %}
+    
+        <a class="btn btn-info" href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
 
-    <a class="btn btn-info" href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
-
-    {{ include('article/_delete_form.html.twig') }}
+        {{ include('article/_delete_form.html.twig') }}
+    
+    {% endif %}
     
 {% endblock %}
