--- a/templates/components/userDashboardNavComponent.html.twig
+++ b/templates/components/userDashboardNavComponent.html.twig
@@ -1,18 +1,15 @@
+{% set requestRoute = app.request.get('_route') %}
+
 <nav class="navbar navbar-expand bg-light">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Article</a>
-                </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Article
-                    </a>
+                    <a class="nav-link dropdown-toggle
+                    {% if requestRoute == 'app_article_new' or requestRoute  == 'app_article_index' %}active{% endif %} "
+                    href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Article</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Create</a></li>
-                        <li><a class="dropdown-item" href="#">List</a></li>
-                        <li><a class="dropdown-item" href="#">List</a></li>
+                        <li><a class="dropdown-item" href="{{ path('app_article_index') }}">List</a></li>
                     </ul>
                 </li>
             </ul>
