--- a/templates/components/adminDashboardNavComponent.html.twig
+++ b/templates/components/adminDashboardNavComponent.html.twig
@@ -13,18 +13,18 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle
-                    {% if requestRoute == 'app_warehouse_new' or requestRoute  == 'app_warehouse_index' %}active{% endif %}
-                " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Warehouse</a>
+                    <a class="nav-link dropdown-toggle
+                    {% if requestRoute == 'app_warehouse_new' or requestRoute  == 'app_warehouse_index' %}active{% endif %}" 
+                    href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Warehouse</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{{ path('app_warehouse_new') }}">Create new</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_warehouse_index') }}">List</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle
-                    {% if requestRoute == 'app_article_new' or requestRoute  == 'app_article_index' %}active{% endif %}
-                " href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Article</a>
+                    <a class="nav-link dropdown-toggle
+                    {% if requestRoute == 'app_article_new' or requestRoute  == 'app_article_index' %}active{% endif %}"
+                    href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Article</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{{ path('app_article_new') }}">Create new</a></li>
                         <li><a class="dropdown-item" href="{{ path('app_article_index') }}">List</a></li>
