--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -39,7 +39,8 @@
         </tbody>
     </table>
 
-    <a class="btn btn-info" href="{{ path('app_article_index') }}">back to list</a>
+    <a class="btn btn-info" href="{{ path('app_article_index') }}">Back to list</a>
+    <a class="btn btn-success" href="{{ path('app_article_in_stock_new') }}">Add Article to ArticleInStock</a>
     
     {% if is_granted('ROLE_ADMIN') %}
     
@@ -48,5 +49,48 @@
         {{ include('article/_delete_form.html.twig') }}
     
     {% endif %}
+
+    <div class="card mt-4">
+        <div class="card-header">
+            <h5 class="card-title">Article in stock: index</h5>
+        </div>
+        <div class="card-body">
+            <table class="table table-stripped">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Amount</th>
+                        <th>Remaining_amount</th>
+                        <th>File</th>
+                        <th>Article_operation_type</th>
+                        <th>Created_at</th>
+                        <th>Created_by</th>
+                        <th>actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for article_in_stock in article_in_stocks %}
+                    <tr>
+                        <td>{{ article_in_stock.id }}</td>
+                        <td>{{ article_in_stock.amount }}</td>
+                        <td>{{ article_in_stock.remainingAmount }}</td>
+                        <td>{{ article_in_stock.file }}</td>
+                        <td>{{ article_in_stock.articleOperationType }}</td>
+                        <td>{{ article_in_stock.createdAt ? article_in_stock.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                        <td>{{ article_in_stock.createdBy }}</td>
+                        <td>
+                            <a class="btn btn-sm btn-light" href="{{ path('app_article_in_stock_show', {'id': article_in_stock.id}) }}">show</a>
+                            <a class="btn btn-sm btn-light" href="{{ path('app_article_in_stock_edit', {'id': article_in_stock.id}) }}">edit</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="7">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
     
 {% endblock %}
