--- a/templates/article_in_stock/index.html.twig
+++ b/templates/article_in_stock/index.html.twig
@@ -39,5 +39,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_article_in_stock_new') }}">Create new</a>
+    <a href="{{ path('app_article_in_stock_new', {'articleId' : article.id}) }}">Create new</a>
 {% endblock %}
