--- a/templates/article_in_stock/show.html.twig
+++ b/templates/article_in_stock/show.html.twig
@@ -34,9 +34,10 @@
         </tbody>
     </table>
 
-    <a class="btn btn-primary" href="{{ path('app_article_in_stock_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('app_article_in_stock_index', {article: article.id}) }}">back to list</a>
 
-    <a class="btn btn-primary" href="{{ path('app_article_in_stock_edit', {'id': article_in_stock.id}) }}">edit</a>
+    <a class="btn btn-primary" href="{{ path('app_article_in_stock_edit', {'id': article_in_stock.id, article: article.id}) }}">edit</a>
 
     {{ include('article_in_stock/_delete_form.html.twig') }}
+
 {% endblock %}
