--- a/templates/components/articleInStockIndex.html.twig
+++ b/templates/components/articleInStockIndex.html.twig
@@ -1,9 +1,9 @@
 <div class="card mt-4">
 	<div class="card-header">
-		<h5 class="card-title">Article in stock: index</h5>
+		<h5 class="card-title mb-0">Article in stock: index</h5>
 	</div>
 	<div class="card-body">
-		<table class="table table-stripped">
+		<table class="table table-striped table-sm">
 			<thead>
 				<tr>
 					<th>Id</th>
