--- a/templates/warehouse/show.html.twig
+++ b/templates/warehouse/show.html.twig
@@ -4,9 +4,9 @@
 
 {% block dashboardBody %}
 
-    <h1>Warehouse</h1>
+    <h1><span class="text-muted">Warehouse:</span> {{ warehouse.name }}</h1>
 
-    <table class="table">
+    <table class="table table-sm">
         <tbody>
             <tr>
                 <th>Id</th>
