--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -4,9 +4,9 @@
 
 {% block dashboardBody %}
 
-    <h1>Article</h1>
+    <h1><span class="text-muted">Article:</span> {{ article.name }}</h1>
 
-    <table class="table">
+    <table class="table table-sm">
         <tbody>
             <tr>
                 <th>Id</th>
