--- a/templates/article_in_stock/index.html.twig
+++ b/templates/article_in_stock/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>ArticleInStock index</h1>
 
-    <table class="table">
+    <table class="table table-striped table-sm">
         <thead>
             <tr>
                 <th>Id</th>
