--- a/templates/article_in_stock/show.html.twig
+++ b/templates/article_in_stock/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>ArticleInStock</h1>
 
-    <table class="table">
+    <table class="table table-sm">
         <tbody>
             <tr>
                 <th>Id</th>
