--- a/templates/warehouse/index.html.twig
+++ b/templates/warehouse/index.html.twig
@@ -6,7 +6,7 @@
 
     <h1>Warehouse index</h1>
 
-    <table class="table">
+    <table class="table table-striped table-sm">
         <thead>
             <tr>
                 <th>Id</th>
