--- a/templates/article_in_stock/new.html.twig
+++ b/templates/article_in_stock/new.html.twig
@@ -3,6 +3,8 @@
 {% block title %}New ArticleInStock{% endblock %}
 
 {% block dashboardBody %}
+
+    {{ component('showArticle', {article: article}) }}
     
     <div class="card">
         <div class="card-header">
