Article: Form: add .pdf file

--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -10,6 +10,8 @@
     padding: 7px 12px;
     border: 1px solid gray;
     margin-bottom: 10px; 
+    font-size: small;
+    color: red;
 }
 </style>
 {% endblock %}
