--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -14,6 +14,12 @@
         {% endif %}
     </div>
 
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success text-small">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     <div class="card">
         <div class="card-body">
             {% block dashboardBody %}{% endblock %}
