--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -27,12 +27,13 @@
                 <td>{{ article.amountInStock }}</td>
                 <td>{{ article.vat }}</td>
                 <td>{{ article.unitPrice }}</td>
-                <td><a href="{{ url('app_home') }}{{ article.file }}">{{ article.file }}</a></td>
+                <td><a href="{{ url('app_home') }}{{ article.file }}">link</a></td>
                 <td>{{ article.unitMeasurment }}</td>
                 <td>
                     <a class="btn btn-sm btn-info" href="{{ path('app_article_show', {'id': article.id}) }}">show</a>
                     {% if is_granted('ROLE_ADMIN') %}
                         <a class="btn btn-sm btn-info" href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+                        {{ include('article/_delete_form.html.twig') }}
                     {% endif %}
                 </td>
             </tr>
