--- a/templates/article_in_stock/show.html.twig
+++ b/templates/article_in_stock/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>File</th>
-                <td>{{ article_in_stock.file }}</td>
+                <td><a href="{{ path('app_home') }}{{ article_in_stock.file }}">{{ article_in_stock.file }}</td>
             </tr>
             <tr>
                 <th>Created_at</th>
