--- a/templates/article_in_stock/new.html.twig
+++ b/templates/article_in_stock/new.html.twig
@@ -8,7 +8,7 @@
     
     <div class="card">
         <div class="card-header">
-            <h5 class="card-title mb-0">Create new ArticleInStock</h5>
+            <h5 class="card-title mb-0">Article In Stock</h5>
         </div>
         <div class="card-body">
             {{ include('article_in_stock/_form.html.twig') }}
