--- a/templates/article_in_stock/show.html.twig
+++ b/templates/article_in_stock/show.html.twig
@@ -28,8 +28,8 @@
                 <td>{{ article_in_stock.remainingAmount }}</td>
             </tr>
             <tr>
-                <th>Article_operation_type</th>
-                <td>{{ article_in_stock.articleOperationType }}</td>
+                <th>Operation type</th>
+                <td>{{ article_in_stock.operationType }}</td>
             </tr>
         </tbody>
     </table>
