--- a/templates/components/articleInStockIndex.html.twig
+++ b/templates/components/articleInStockIndex.html.twig
@@ -8,11 +8,11 @@
 				<tr>
 					<th>Id</th>
 					<th>Amount</th>
-					<th>Remaining_amount</th>
+					<th>Remaining amount</th>
 					<th>File</th>
-					<th>Article_operation_type</th>
-					<th>Created_at</th>
-					<th>Created_by</th>
+					<th>Operation type</th>
+					<th>Created at</th>
+					<th>Created by</th>
 					<th>actions</th>
 				</tr>
 			</thead>
@@ -23,7 +23,7 @@
 						<td>{{ article_in_stock.amount }}</td>
 						<td>{{ article_in_stock.remainingAmount }}</td>
 						<td><a href="{{ path('app_home') }}{{ article_in_stock.file }}">{{ article_in_stock.file }}</a></td>
-						<td>{{ article_in_stock.articleOperationType }}</td>
+						<td>{{ article_in_stock.operationType }}</td>
 						<td>{{ article_in_stock.createdAt ? article_in_stock.createdAt|date('Y-m-d H:i:s') : '' }}</td>
 						<td>{{ article_in_stock.createdBy }}</td>
 						<td>
