--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -14,11 +14,7 @@
         {% endif %}
     </div>
 
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success text-small">
-            {{ message }}
-        </div>
-    {% endfor %}
+    {{ component('flashMessages') }}
 
     <div class="card">
         <div class="card-body">
